Implements users and person routes
